<resources>
    <string name="app_name">Hartsbourne</string>
    <string name="text_hello_mhsystems">Hello hartsbourne!</string>
    <string name="error_no_internet">Please check your internet connection.</string>
    <string name="error_server_problem">There was a problem connecting to the server. Please try again later.</string>
    <string name="error_no_connection">No Internet Connection found.</string>
    <string name="error_try_again">Try again later</string>
    <string name="error_no_competitions">No competitions</string>
    <string name="error_no_course">No Course</string>
    <string name="error_no_data_found">No Data Found</string>
    <string name="error_no_member">No Members found</string>
    <string name="error_no_friend">No Friends found</string>
    <string name="error_no_booking">No Booking found</string>
    <string name="error_no_top_up">No Top Up range found</string>
    <string name="error_select_different_month">Select different month</string>
    <string name="error_check_internet">Please check your internet connectivity and try again</string>
    <string name="error_no_data">No Data found</string>
    <string name="error_please_retry">Something went wrong with internet connection. Please try again.</string>
    <string name="message_no_date_selected">No date selected.</string>
    <string name="error_no_club_news">No Club News</string>
    <string name="error_wrong_date_selection">You can only view data of current date and future dates.</string>
    <string name="error_valid_email">Please enter valid Email address.</string>
    <string name="error_no_transaction">No Transaction Receipt Available.</string>
    <string name="error_no_topup_found">Unable to access your Top-up balance.</string>
    <string name="text_join">Join</string>
    <string name="text_joined">Joined</string>
    <string name="alert_dialog_close">Close</string>
    <string name="text_alert_book_course">Book a tee time</string>
    <string name="text_alert_book_competitons">Book this competition</string>
    <string name="text_alert_competions_message">In order to book this competition or create event call us or email:</string>
    <string name="text_alert_course_message">In order to book a tee time or create event call us or email:</string>
    <string name="text_title_please_login">PLEASE LOGIN</string>
    <string name="text_email_hint">Username</string>
    <string name="text_password">Password</string>
    <string name="button_text_login">Login</string>
    <string name="text_title_forgot_password"><u>Forgot your password?</u></string>
    <string name="error_all_required">Please enter your username and password.</string>
    <string name="text_title_copyright">© 2016 Gemini Media Network</string>
    <string name="title_golf_club_name">Hartsbourne GOLF CLUB</string>
    <string name="title_home_message">“Kindness is the language which the deaf can hear and the blind can see.”</string>
    <string name="title_home_message_author">Mark Twain</string>
    <string name="title_course_diary">COURSE DIARY</string>
    <string name="title_event_title">Event Title</string>
    <string name="title_competitions">COMPETITIONS</string>
    <string name="title_competitions_prize">fee per player</string>
    <string name="tab_title_events">EVENTS</string>
    <string name="tab_title_current">CURRENT</string>
    <string name="tab_title_completed">COMPLETED</string>
    <string name="tab_title_upcoming">UPCOMING</string>
    <string name="text_title_members">Members</string>
    <string name="tab_title_memebers">MEMBERS</string>
    <string name="tab_title_friends">FRIENDS</string>
    <string name="tab_title_contact_us">CONTACT US</string>
    <string name="text_title_show_certificate">SHOW</string>
    <string name="button_title_hcap_details">HANDICAP DETAILS</string>
    <string name="text_member_since">Member since </string>
    <string name="text_member_no_email">Email not found.</string>
    <string name="text_member_no_address">Address not found.</string>
    <string name="alert_title_friend_invitation">Friend Invitation</string>
    <string name="alert_title_friend_invite_message">Do you wish to add this member to your Friend list?</string>
    <string name="alert_title_friend_remove">Remove Friend</string>
    <string name="alert_title_unjoin">Unjoin Competition</string>
    <string name="alert_title_unjoin_message">Are you sure you want to leave this competition?</string>
    <string name="alert_title_friend_remove_message">Do you wish to remove this member from your Friend list?</string>
    <string name="title_card_balance">CARD BALANCE</string>
    <string name="title_recent_transaction">RECENT TRANSACTIONS</string>
    <string name="title_current_invoice">CURRENT INVOICE</string>
    <string name="button_title_show_all">SHOW ALL</string>
    <string name="title_my_account">My Account</string>
    <string name="tab_title_your_details">Your Details</string>
    <string name="tab_title_handicap">Handicap</string>
    <string name="tab_title_finances">Finances</string>
    <string name="title_text_invoice">INVOICE NUMBER</string>
    <string name="title_text_date">DATE</string>
    <string name="title_text_status">STATUS</string>
    <string name="title_text_description">DESCRIPTION</string>
    <string name="title_text_from">FROM</string>
    <string name="title_text_to">TO</string>
    <string name="title_text_value">VALUE</string>
    <string name="title_text_tax">TAX</string>
    <string name="title_text_total">TOTAL</string>
    <string name="title_text_remarks">REMARKS</string>
    <string name="text_club_news_date">Thursday, 2nd June 2016</string>
    <string name="text_club_news_time">06:35AM</string>
<string name="text_club_news_detail">In Part Three, I promised we would get into the resources. Before we do, however, let’s discuss a treasure that most of us have been exposed to, but don’t take nearly enough time out of our day to focus on – the power of prayer. This may offend some people, but I hope it does not; as that is not my intent.

\n\nAs humans, we have progressed in so many ways, but we have lost touch with our bodies, nature, and the power of prayer. There seems to be a spiritual renaissance, of sorts, going on in the “new age” movement.

\n\nHowever, there are a large number of children growing up with no spiritual guidance at all. There are many reasons, and excuses, for this, but a large portion of this generation of children could grow up, out of touch, with their spiritual health.

\n\nAlways remember that “whole health” deals with mind, body, and spirit, as they are interconnected. If these three components are healthy, you are in good shape at any age.</string>
    <string name="text_title_settings">Settings</string>
    <string name="text_title_reset_pwd">Reset Password</string>
    <string name="text_title_contact_us">Contact Us</string>
    <string name="edit_title_current_pwd">Current password</string>
    <string name="edit_title_new_pwd">New password</string>
    <string name="edit_title_confirm_pwd">New password confirm</string>
    <string name="button_reset_pwd">Reset password</string>
    <string name="error_incorrect_current_pwd">Incorrect current password</string>
    <string name="error_pwd_no_match">New passwords did not match</string>
    <string name="error_fields_required">All fields are required.</string>
    <string name="edit_title_forgot_pwd">Forgot Password</string>
    <string name="edit_email_hint">Example@domain.com</string>
    <string name="button_send_pwd">Send Password</string>
    <string name="text_title_update_pwd">Please create your own Username &amp; Password below</string>
    <string name="edit_hint_username">Username</string>
    <string name="edit_title_confirm_password">Confirm password</string>
    <string name="buton_update">Update</string>
    <string name="error_no_match_pwd">Password doesn’t match</string>
    <string name="title_text_personal_details">Personal Details</string>
    <string name="title_text_contact">Mobile</string>
    <string name="title_text_home">Home</string>
    <string name="title_text_address">Address</string>
    <string name="title_text_uname_password">Username &amp; Password</string>
    <string name="title_text_name">Name</string>
    <string name="title_text_membership_type">Membership type</string>
    <string name="title_text_phone_number">Phone no</string>
    <string name="title_text_mobile">Mobile</string>
    <string name="title_text_work">Work</string>
    <string name="title_text_email">Email</string>
    <string name="title_text_city">City</string>
    <string name="title_text_street">Street</string>
    <string name="title_text_postal_code">Postal Code</string>
    <string name="title_text_username">Username</string>
    <string name="title_text_password">Password</string>
    <string name="title_text_address_line1">ADDRESS LINE 1</string>
    <string name="title_text_visible">VISIBLE:</string>
    <string name="text_title_telephone">TELEPHONE</string>
    <string name="text_title_fax">FAX</string>
    <string name="text_title_email">EMAIL</string>
    <string name="text_title_address">ADDRESS</string>
    <string name="text_title_member_administration">Membership Administration</string>
    <string name="text_name_member_administration">Clare Livingston</string>
    <string name="text_email_member_administration">clarel@hartsbournegolfclub.co.uk</string>
    <string name="text_contact_member_administration">01344 621681</string>
    <string name="text_title_restaurant_mngr">Restaurant Manager</string>
    <string name="text_name_rst_manager">Elaine Brace</string>
    <string name="text_email_rst_manager">elaineb@hartsbournegolfclub.co.uk</string>
    <string name="text_contact_rst_manager">01344 298013</string>
    <string name="text_title_food_mngr">Food &amp; Beverage Manager</string>
    <string name="text_name_food_mngr">Sherin George</string>
    <string name="text_email_food_mngr">shering@hartsbournegolfclub.co.uk</string>
    <string name="text_contact_food_mngr">01344 298013</string>
    <string name="text_title_club_shop">Club Shop</string>
    <string name="text_name_club_shop">Assistant Professionals</string>
    <string name="text_email_club_shop">proshop@hartsbournegolfclub.co.uk</string>
    <string name="text_contact_club_shop">01344 621681</string>
    <string name="text_title_caddie_master">Caddie Master</string>
    <string name="text_name_caddie_master">Vince Reeves</string>
    <string name="text_email_caddie_master">caddiemaster@hartsbournegolfclub.co.uk</string>
    <string name="text_contact_caddie_master">01344 626064</string>
    <string name="text_title_golf_reservations">Golf Reservations</string>
    <string name="text_name_golf_reservations">Anne Gladman</string>
    <string name="text_email_golf_reservations">anneg@hartsbournegolfclub.co.uk</string>
    <string name="text_contact_golf_reservations">01344 298006</string>
    <string name="text_title_golf_op_mngr">Golf Operations Manager</string>
    <string name="text_name_golf_op_mngr">Christian Foreman</string>
    <string name="text_email_golf_op_mngr">christianf@hartsbournegolfclub.co.uk</string>
    <string name="text_contact_golf_op_mngr">01344 298003</string>
    <string name="text_title_general_mngr">General Manager</string>
    <string name="text_name_general_mngr">Tristan Hall</string>
    <string name="text_email_general_mngr">tristanh@hartsbournegolfclub.co.uk</string>
    <string name="text_contact_general_mngr">01344 621681</string>
    <string name="text_title_Secretariat">Secretariat</string>
    <string name="text_name_Secretariat">General Enquiries</string>
    <string name="text_email_Secretariat">info@hartsbournegolfclub.co.uk</string>
    <string name="text_contact_Secretariat">01344 621681</string>
</resources>