<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhiteffffff">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- CONTENT SHOULD BE IN SCROLL FOR SMALL DEVICES -->

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="50dp" />


                <!-- GOLF CLUB LOGO -->

                <ImageView
                    android:id="@+id/ivAppLogo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="20dp" />

                <!-- TITLE TELEPHONE -->

                <LinearLayout
                    android:id="@+id/llTelephone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <com.mh.systems.hartsbourne.customfonts.RobotoTextView
                        style="@style/MyDetailHeading"
                        android:text="@string/text_title_telephone" />

                    <!-- NAME OF PERSON -->

                    <com.mh.systems.hartsbourne.customfonts.RobotoTextView
                        android:id="@+id/tvTelephone"
                        style="@style/MyDetailValues" />

                </LinearLayout>

                <!-- TITLE FAX -->

                <LinearLayout
                    android:id="@+id/llFax"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <com.mh.systems.hartsbourne.customfonts.RobotoTextView
                        style="@style/MyDetailHeading"
                        android:layout_marginTop="20dp"
                        android:text="@string/text_title_fax" />

                    <!-- NAME OF PERSON -->

                    <com.mh.systems.hartsbourne.customfonts.RobotoTextView
                        android:id="@+id/tvFax"
                        style="@style/MyDetailValues" />

                </LinearLayout>

                <!-- TITLE EMAIL -->

                <LinearLayout
                    android:id="@+id/llEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <com.mh.systems.hartsbourne.customfonts.RobotoTextView
                        style="@style/MyDetailHeading"
                        android:layout_marginTop="20dp"
                        android:text="@string/text_title_email" />

                    <!-- NAME OF PERSON -->

                    <com.mh.systems.hartsbourne.customfonts.RobotoTextView
                        android:id="@+id/tvEmail"
                        style="@style/MyDetailValues" />

                </LinearLayout>

                <!-- TITLE ADDRESS -->

                <LinearLayout
                    android:id="@+id/llAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <com.mh.systems.hartsbourne.customfonts.RobotoTextView
                        style="@style/MyDetailHeading"
                        android:layout_marginTop="20dp"
                        android:text="@string/text_title_address" />

                    <!-- NAME OF PERSON -->

                    <com.mh.systems.hartsbourne.customfonts.RobotoTextView
                        android:id="@+id/tvAddress"
                        style="@style/MyDetailValues"
                        android:layout_width="350dp" />

                </LinearLayout>

                <!-- TITLE DEPARTMENTS START HERE -->

                <LinearLayout
                    android:id="@+id/llDepartments"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <!-- Membership Administration -->

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <com.mh.systems.hartsbourne.customfonts.RobotoTextView
                            style="@style/MyDetailHeading"
                            android:layout_marginTop="20dp"
                            android:text="@string/text_title_member_administration" />

                        <com.mh.systems.hartsbourne.customfonts.RobotoTextView
                            style="@style/MyDetailValues"
                            android:text="@string/text_name_member_administration" />

                        <com.mh.systems.hartsbourne.customfonts.RobotoTextView
                            android:id="@+id/tvEmailAdministration"
                            style="@style/MyDetailValues"
                            android:text="@string/text_email_member_administration" />

                        <com.mh.systems.hartsbourne.customfonts.RobotoTextView
                            android:id="@+id/tvCallAdministration"
                            style="@style/MyDetailValues"
                            android:text="@string/text_contact_member_administration" />

                    </LinearLayout>

                    <!-- Restaurant Manager -->

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <com.mh.systems.hartsbourne.customfonts.RobotoTextView
                            style="@style/MyDetailHeading"
                            android:layout_marginTop="20dp"
                            android:text="@string/text_title_restaurant_mngr" />

                        <com.mh.systems.hartsbourne.customfonts.RobotoTextView
                            style="@style/MyDetailValues"
                            android:text="@string/text_name_rst_manager" />

                        <com.mh.systems.hartsbourne.customfonts.RobotoTextView
                            android:id="@+id/tvEmailRstMngr"
                            style="@style/MyDetailValues"
                            android:text="@string/text_email_rst_manager" />

                        <com.mh.systems.hartsbourne.customfonts.RobotoTextView
                            android:id="@+id/tvCallRstMngr"
                            style="@style/MyDetailValues"
                            android:text="@string/text_contact_rst_manager" />

                    </LinearLayout>

                    <!-- Food & Beverage Manager -->

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <com.mh.systems.hartsbourne.customfonts.RobotoTextView
                            style="@style/MyDetailHeading"
                            android:layout_marginTop="20dp"
                            android:text="@string/text_title_food_mngr" />

                        <com.mh.systems.hartsbourne.customfonts.RobotoTextView
                            style="@style/MyDetailValues"
                            android:text="@string/text_name_food_mngr" />

                        <com.mh.systems.hartsbourne.customfonts.RobotoTextView
                            android:id="@+id/tvEmailFoodMngr"
                            style="@style/MyDetailValues"
                            android:text="@string/text_email_food_mngr" />

                        <com.mh.systems.hartsbourne.customfonts.RobotoTextView
                            android:id="@+id/tvCallFoodMngr"
                            style="@style/MyDetailValues"
                            android:text="@string/text_contact_food_mngr" />

                    </LinearLayout>

                    <!-- Club Shop -->

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <com.mh.systems.hartsbourne.customfonts.RobotoTextView
                            style="@style/MyDetailHeading"
                            android:layout_marginTop="20dp"
                            android:text="@string/text_title_club_shop" />

                        <com.mh.systems.hartsbourne.customfonts.RobotoTextView
                            style="@style/MyDetailValues"
                            android:text="@string/text_name_club_shop" />

                        <com.mh.systems.hartsbourne.customfonts.RobotoTextView
                            android:id="@+id/tvEmailClubShop"
                            style="@style/MyDetailValues"
                            android:text="@string/text_email_club_shop" />

                        <com.mh.systems.hartsbourne.customfonts.RobotoTextView
                            android:id="@+id/tvCallClubShop"
                            style="@style/MyDetailValues"
                            android:text="@string/text_contact_club_shop" />

                    </LinearLayout>

                    <!-- Caddie Master -->

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <com.mh.systems.hartsbourne.customfonts.RobotoTextView
                            style="@style/MyDetailHeading"
                            android:layout_marginTop="20dp"
                            android:text="@string/text_title_caddie_master" />

                        <com.mh.systems.hartsbourne.customfonts.RobotoTextView
                            style="@style/MyDetailValues"
                            android:text="@string/text_name_caddie_master" />

                        <com.mh.systems.hartsbourne.customfonts.RobotoTextView
                            android:id="@+id/tvEmailCaddieMaster"
                            style="@style/MyDetailValues"
                            android:text="@string/text_email_caddie_master" />

                        <com.mh.systems.hartsbourne.customfonts.RobotoTextView
                            android:id="@+id/tvCallCaddieMaster"
                            style="@style/MyDetailValues"
                            android:text="@string/text_contact_caddie_master" />

                    </LinearLayout>

                    <!-- Golf Reservations -->

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <com.mh.systems.hartsbourne.customfonts.RobotoTextView
                            style="@style/MyDetailHeading"
                            android:layout_marginTop="20dp"
                            android:text="@string/text_title_golf_reservations" />

                        <com.mh.systems.hartsbourne.customfonts.RobotoTextView
                            style="@style/MyDetailValues"
                            android:text="@string/text_name_golf_reservations" />

                        <com.mh.systems.hartsbourne.customfonts.RobotoTextView
                            android:id="@+id/tvEmailGolfReservations"
                            style="@style/MyDetailValues"
                            android:text="@string/text_email_golf_reservations" />

                        <com.mh.systems.hartsbourne.customfonts.RobotoTextView
                            android:id="@+id/tvCallGolfReservations"
                            style="@style/MyDetailValues"
                            android:text="@string/text_contact_golf_reservations" />

                    </LinearLayout>

                    <!-- Golf Operations Manager -->

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <com.mh.systems.hartsbourne.customfonts.RobotoTextView
                            style="@style/MyDetailHeading"
                            android:layout_marginTop="20dp"
                            android:text="@string/text_title_golf_op_mngr" />

                        <com.mh.systems.hartsbourne.customfonts.RobotoTextView
                            style="@style/MyDetailValues"
                            android:text="@string/text_name_golf_op_mngr" />

                        <com.mh.systems.hartsbourne.customfonts.RobotoTextView
                            android:id="@+id/tvEmailGolfOpMngr"
                            style="@style/MyDetailValues"
                            android:text="@string/text_email_golf_op_mngr" />

                        <com.mh.systems.hartsbourne.customfonts.RobotoTextView
                            android:id="@+id/tvCallGolfOpMngr"
                            style="@style/MyDetailValues"
                            android:text="@string/text_contact_golf_op_mngr" />

                    </LinearLayout>

                    <!-- General Manager -->

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:visibility="visible">

                        <com.mh.systems.hartsbourne.customfonts.RobotoTextView
                            style="@style/MyDetailHeading"
                            android:layout_marginTop="20dp"
                            android:text="@string/text_title_general_mngr" />

                        <com.mh.systems.hartsbourne.customfonts.RobotoTextView
                            style="@style/MyDetailValues"
                            android:text="@string/text_name_general_mngr" />

                        <com.mh.systems.hartsbourne.customfonts.RobotoTextView
                            android:id="@+id/tvEmailGeneralMngr"
                            style="@style/MyDetailValues"
                            android:text="@string/text_email_general_mngr" />

                        <com.mh.systems.hartsbourne.customfonts.RobotoTextView
                            android:id="@+id/tvCallGeneralMngr"
                            style="@style/MyDetailValues"
                            android:text="@string/text_contact_general_mngr" />

                    </LinearLayout>

                    <!-- Secretariat -->

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:visibility="visible">

                        <com.mh.systems.hartsbourne.customfonts.RobotoTextView
                            style="@style/MyDetailHeading"
                            android:layout_marginTop="20dp"
                            android:text="@string/text_title_Secretariat" />


                        <com.mh.systems.hartsbourne.customfonts.RobotoTextView
                            style="@style/MyDetailValues"
                            android:text="@string/text_name_Secretariat" />

                        <com.mh.systems.hartsbourne.customfonts.RobotoTextView
                            android:id="@+id/tvEmailSecretariat"
                            style="@style/MyDetailValues"
                            android:text="@string/text_email_Secretariat" />

                        <com.mh.systems.hartsbourne.customfonts.RobotoTextView
                            android:id="@+id/tvCallSecretariat"
                            style="@style/MyDetailValues"
                            android:text="@string/text_contact_Secretariat" />

                    </LinearLayout>

                </LinearLayout>

                <!-- SPACE VIEW AT BOTTOM -->

                <View
                    android:layout_width="match_parent"
                    android:layout_height="40dp" />

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</RelativeLayout>
