<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGreyf1f1f0">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- TOP BAR [TITLE] -->

        <android.support.v7.widget.Toolbar
            android:id="@+id/tbResetPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color4B4B49"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            android:title="@string/text_title_reset_pwd" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="25dp"
            android:orientation="vertical">

            <!-- CURRENT PASSWORD FIELD -->

            <EditText
                android:id="@+id/etCurrentPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/edittext_shape_white"
                android:gravity="center"
                android:hint="@string/edit_title_current_pwd"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:maxLength="20"
                android:maxLines="1"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/colorBlack000000"
                android:textColorHint="@color/colorD6D0C9"
                android:textSize="17sp" />

            <!-- OLD / CURRENT PASSWORD ERROR -->

            <TextView
                android:id="@+id/tvCurrPwdError"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/error_incorrect_current_pwd"
                android:textColor="@color/colorDF7D72"
                android:textSize="13sp"
                android:visibility="gone" />

            <!-- NEW PASSWORD FIELD -->

            <EditText
                android:id="@+id/etNewPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/edittext_shape_white"
                android:gravity="center"
                android:hint="@string/edit_title_new_pwd"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:maxLength="20"
                android:maxLines="1"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/colorBlack000000"
                android:textColorHint="@color/colorD6D0C9"
                android:textSize="17sp" />


            <!-- NEW PASSWORD FIELD -->

            <EditText
                android:id="@+id/etConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/edittext_shape_white"
                android:gravity="center"
                android:hint="@string/edit_title_confirm_pwd"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLength="20"
                android:maxLines="1"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/colorBlack000000"
                android:textColorHint="@color/colorD6D0C9"
                android:textSize="17sp" />

            <!-- INCORRECT NEW PASSWORD ERROR -->

            <TextView
                android:id="@+id/tvNewPwdError"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/error_pwd_no_match"
                android:textColor="@color/colorDF7D72"
                android:visibility="gone" />


            <!-- RESET PASSWORD BUTTON WITH TICK ICON -->

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_login_shape_c0995b">


                <ImageView
                    android:id="@+id/ivResetPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_tick"
                    android:text="@string/button_reset_pwd" />

                <Button
                    android:id="@+id/btResetPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/background_button_e8dcc9"
                    android:enabled="false"
                    android:text="@string/button_reset_pwd"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhiteffffff"
                    android:textSize="17sp" />

            </FrameLayout>

        </LinearLayout>


    </LinearLayout>

</RelativeLayout>
